--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@vonage/server-sdk": "^3.22.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "node-cron": "^4.2.0",
     "node-fetch": "^2.7.0",
